--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,17 +1,23 @@
 .card-div {
   height: 20rem;
   width: 14rem;
-  border: solid 1px grey;
+  border: solid 0.6px rgba(199, 191, 191, 0.521);
   display: block;
-  background-color: teal;
+  position: relative;
+  padding: 0px;
+  margin: -1px;
+}
+
+@media (max-width: 368px) {
+  .card-div {
+    width: 100vw;
+    height: 95vh;
+  }
 }
 
 .card-img {
-  background-color: hotpink;
-  height: 40%;
-  width: 85%;
-  position: relative;
-  margin: 1rem;
+  height: 60%;
+  width: 100%;
 }
 
 .team-div {
@@ -22,9 +28,22 @@
   margin-top: 1rem;
 }
 
-.text-btn {
-  text-decoration: underline;
-  color: blue;
+.description-btn,
+.description-btn:active,
+.description-btn:hover {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.description-btn:focus {
+  display: none;
+}
+
+.card-btn {
+  margin-left: 65%;
   position: absolute;
-  margin: 18rem 0 0 10rem;
+  top: 90%;
+  width: 4.6rem;
+  padding: 0;
 }
