--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -12,8 +12,8 @@
 
 .title-text {
   background-color: rgba(146, 238, 241, 0.623);
-  padding-bottom: 0.4rem;
-  padding-top: 0.6rem;
+  padding-bottom: 0.3rem;
+  padding-top: 0.4rem;
   text-align: center;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -23,10 +23,10 @@
 .auth-box__div {
   width: 100%;
   text-align: right;
-  padding-top: 1.5rem;
+  padding-top: 1rem;
 }
 .form-group {
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 
 .bi-person-circle {
@@ -34,15 +34,13 @@
   margin-right: auto;
   margin-left: auto;
   color: #3412f585;
-  width: 40%;
+  width: 30%;
 }
 
 .switch-auth__div {
   display: flex;
   justify-content: space-around;
   color: #4806ff;
-  margin-top: 1rem;
-  margin-bottom: 1.3rem;
   border-bottom: 3px solid rgba(101, 7, 252, 0.459);
 }
 
@@ -55,7 +53,7 @@
   margin-right: 1.2rem;
   margin-left: 1rem;
   text-align: right;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .forgot-password {
@@ -78,6 +76,11 @@
   background-color: rgba(146, 238, 241, 0.623);
   text-align: center;
 }
+
+.form-check {
+  margin-bottom: 0.7rem;
+}
+
 @media only screen and (min-width: 600px) {
   .title-text {
     position: absolute;
