reworked style, added pages

--- a/src/shared/Input/Button.css
+++ b/src/shared/Input/Button.css
@@ -1,9 +1,9 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #ff0055;
+  border: 1px solid rgb(100, 4, 168);
   border-radius: 4px;
-  background: #ff0055;
+  background: rgb(100, 4, 168);
   color: white;
   cursor: pointer;
   margin-right: 1rem;
@@ -17,30 +17,30 @@
 
 .button:hover,
 .button:active {
-  background: #ff4382;
-  border-color: #ff4382;
+  background: rgb(143, 48, 211);
+  border-color: rgb(143, 48, 211);
 }
 
 .button--inverse {
   background: transparent;
-  color: #ff0055;
+  color: rgb(100, 4, 168);
 }
 
 .button--inverse:hover,
 .button--inverse:active {
   color: white;
-  background: #ff0055;
+  background: rgb(100, 4, 168);
 }
 
 .button--danger {
-  background: #830000;
-  border-color: #830000;
+  background: rgb(53, 0, 90);
+  border-color: rgb(53, 0, 90);
 }
 
 .button--danger:hover,
 .button--danger:active {
-  background: #f34343;
-  border-color: #f34343;
+  background: rgb(66, 14, 104);
+  border-color: rgb(66, 14, 104);
 }
 
 .button:disabled,
