--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -1,25 +1,3 @@
-.auth-main {
-  background: url('../../assets/background2.jpg');
-  position: fixed;
-  background-repeat: no-repeat;
-  background-size: 100vw 100vh;
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  opacity: 0.8;
-}
-
-.title-text {
-  background-color: rgba(146, 238, 241, 0.623);
-  padding-bottom: 0.3rem;
-  padding-top: 0.4rem;
-  text-align: center;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.title-text h4 {
-  display: none;
-}
 .auth-box__div {
   width: 100%;
   text-align: right;
@@ -29,25 +7,22 @@
   margin-bottom: 0rem;
 }
 
-.bi-person-circle {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  color: #3412f585;
-  width: 30%;
-}
-
 .switch-auth__div {
   display: flex;
   justify-content: space-around;
-  color: #4806ff;
-  border-bottom: 3px solid rgba(101, 7, 252, 0.459);
+  border-bottom: 3px solid rgb(150, 3, 255);
+  margin-bottom: 2.4rem;
+  margin-top: 0.5rem;
 }
 
-/* .switch-auth__div h2:active {
-  color: #2c00a7;
-  text-shadow: 0.4px 0.4px #130058;
-} */
+.switch-auth__div h2 {
+  color: rgb(144, 0, 247);
+  text-shadow: 1px 1px black;
+}
+
+.switch-auth__div h2:active {
+  color: rgb(97, 7, 241);
+}
 
 .form {
   margin-right: 1.2rem;
@@ -60,21 +35,28 @@
   color: rgb(3, 110, 197);
   text-decoration: underline;
   cursor: pointer;
-  margin-top: 0.45rem;
+  margin-top: 0.65rem;
 }
 
 .btn {
   width: 100%;
+  background-color: rgb(100, 4, 168);
+  color: rgb(230, 230, 230);
 }
 
-.copyright-disclaimer {
-  position: fixed;
-  bottom: 0;
-  margin: 0;
-  width: 100%;
-  height: 2rem;
-  background-color: rgba(146, 238, 241, 0.623);
-  text-align: center;
+.btn:disabled,
+.btn:hover:disabled,
+.btn:active:disabled {
+  background: rgba(100, 4, 168, 0.795);
+  color: rgb(255, 255, 255);
+  border-color: rgb(118, 6, 199);
+  cursor: not-allowed;
+}
+
+.btn:active,
+.btn:focus {
+  color: rgb(218, 216, 216);
+  background-color: rgb(143, 48, 211);
 }
 
 .form-check {
@@ -127,11 +109,5 @@
   }
   .form-group {
     width: 20rem;
-  }
-
-  .bi-person-circle {
-    margin-top: -4em;
-    margin-right: 7em;
-    color: #e0d7a8;
   }
 }
