prepared to test with swalmen house, started to work on person element

--- a/src/components/layout/SideDrawerNav.css
+++ b/src/components/layout/SideDrawerNav.css
@@ -12,7 +12,12 @@
 }
 
 .sidedrawer-header {
-  background-color: teal;
+  background-color: rgb(209, 209, 209);
   height: 15%;
   width: 100%;
+}
+
+.profile {
+  position: relative;
+  top: 50%;
 }
