--- a/src/pages/Main/GroupElement.css
+++ b/src/pages/Main/GroupElement.css
@@ -1,7 +1,7 @@
 .group-element-btn {
   width: 100%;
-  height: 5rem;
-  background-color: transparent;
+  height: 3rem;
+  background-color: rgba(161, 190, 235, 0.247);
   border: 3px solid rgb(98, 0, 255);
   border-radius: 10px;
   margin-bottom: 1rem;
