--- a/src/Schedule/GroupElement.module.css
+++ b/src/Schedule/GroupElement.module.css
@@ -1,14 +1,21 @@
 .groupElementBtn {
   width: 100%;
   height: 3rem;
-  background-color: rgba(161, 190, 235, 0.247);
-  border: 3px solid rgb(98, 0, 255);
+  background-image: linear-gradient(
+    rgb(177, 177, 177),
+    rgba(226, 226, 226, 0.534)
+  );
+  border: 1px solid rgb(99, 99, 99);
   border-radius: 10px;
   margin-bottom: 1rem;
+  box-shadow: 2px 2px rgba(85, 85, 85, 0.534);
 }
 
 .groupElementBtn:active,
 .groupElementBtn:focus {
-  background-color: rgb(231, 229, 229);
-  border-color: rgb(16, 1, 148);
+  background-image: linear-gradient(
+    rgb(133, 133, 133),
+    rgba(187, 187, 187, 0.534)
+  );
+  border-color: rgb(107, 107, 107);
 }
