--- a/src/shared/Navbar/Navbar.module.css
+++ b/src/shared/Navbar/Navbar.module.css
@@ -71,3 +71,13 @@
   padding-right: 10px;
   color: black;
 }
+
+.signOutDiv {
+  margin-right: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.signOutDiv p {
+  color: black;
+}
