--- a/src/Auth/Auth.module.css
+++ b/src/Auth/Auth.module.css
@@ -1,15 +1,54 @@
-.authenticationHeader {
-  color: white;
+.mainHeader {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.switchTypeDiv {
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid gray;
+  margin-top: 0.6rem;
+}
+
+.switchTypeDiv h3:active {
+  border-bottom: 3px solid rgba(0, 0, 0, 0.4);
+  margin-bottom: -1px;
+}
+
+.switchTypeDiv h3:hover {
+  border-bottom: 3px solid rgba(0, 0, 0, 0.4);
+  margin-bottom: -1.8px;
+}
+
+.active {
+  border-bottom: 3px solid rgba(0, 0, 0, 0.4);
+  margin-bottom: -1.8px;
+}
+
+.loginBtn {
+  width: 95%;
+  height: 3rem;
+  margin-bottom: 2rem;
+  background-color: rgb(198, 228, 255);
+  border-color: oldlace;
+  border-radius: 10px;
+}
+
+.authForm {
   text-align: center;
 }
 
-.authentication {
-  width: 90%;
-  max-width: 25rem;
-  margin: 7rem auto;
-  text-align: center;
+.signupBtn {
+  width: 95%;
+  position: absolute;
+  top: 90%;
+  right: 2.5%;
+  background-color: rgb(255, 136, 136);
+  border-color: oldlace;
+  border-radius: 10px;
+  height: 3rem;
 }
 
-.authentication form {
-  margin-bottom: 1rem;
+.authDiv {
+  text-align: center;
 }
