--- a/src/Schedule/ExpandedElement.module.css
+++ b/src/Schedule/ExpandedElement.module.css
@@ -1,11 +1,13 @@
 .expandedDiv {
-  width: 100%;
+  width: 85%;
   border: 1px solid rgba(71, 71, 71, 0.411);
   border-radius: 10px;
   margin-bottom: 1rem;
   text-align: center;
   z-index: 500;
   box-shadow: 2px 2px rgba(128, 128, 128, 0.479);
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .expandedDiv img {
