--- a/src/shared/UIElements/Modal.module.css
+++ b/src/shared/UIElements/Modal.module.css
@@ -1,13 +1,14 @@
 .modal {
   z-index: 100;
   position: fixed;
-  top: 22vh;
+  top: 5em;
   left: 10%;
   width: 80%;
   background: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 8px;
   text-align: center;
+  max-height: 80vh;
 }
 
 .modalHeader {
