--- a/src/shared/Navbar/Navbar.module.css
+++ b/src/shared/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
   padding: 0;
-  width: 100vw;
+  min-width: 100vw;
   margin-bottom: 1rem;
   background-color: #c0c0c0;
   box-shadow: 0px 3px rgba(224, 224, 224, 0.692);
