--- a/src/SharedItems/SharedItems.module.css
+++ b/src/SharedItems/SharedItems.module.css
@@ -1,8 +1,26 @@
 .formDiv {
-  margin-bottom: 2em;
+  margin-bottom: 1.4em;
   text-align: right;
 }
 
 .requestDiv {
   padding: 0 1em 1em 1em;
+}
+
+.clearBtn {
+  margin-top: 1em;
+}
+
+.tableDiv {
+  text-align: center;
+}
+
+.tableDiv h3 {
+  margin: auto;
+  margin-bottom: -0.8em;
+}
+
+.tableDiv img {
+  margin: auto;
+  max-width: 100%;
 }
