--- a/src/Auth/Auth.module.css
+++ b/src/Auth/Auth.module.css
@@ -36,6 +36,8 @@
 
 .authForm {
   text-align: center;
+  margin: auto;
+  padding: auto;
 }
 
 .signupBtn {
@@ -50,4 +52,33 @@
 
 .authDiv {
   text-align: center;
+  margin: auto;
+  padding: auto;
+}
+.formControl {
+  position: relative;
+  min-height: 3.5em;
+}
+
+.formControl label {
+  position: absolute;
+  font-size: 0.8em;
+  top: 0;
+  left: 5px;
+  text-transform: uppercase;
+}
+.formControl input,
+.formControl textarea {
+  height: 3em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+}
+
+.formControl input:focus,
+.formControl textarea:focus {
+  outline: none;
+  background: #ebebeb;
+  border-color: #510077;
 }
