--- a/src/shared/FormElements/Button.module.css
+++ b/src/shared/FormElements/Button.module.css
@@ -1,14 +1,15 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #ff0055;
+  border: 1px solid rgb(100, 100, 100);
   border-radius: 4px;
-  background: #ff0055;
+  background: rgb(73, 73, 73);
   color: white;
   cursor: pointer;
   margin-right: 1rem;
   text-decoration: none;
   display: inline-block;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .button:focus {
@@ -17,19 +18,8 @@
 
 .button:hover,
 .button:active {
-  background: #ff4382;
-  border-color: #ff4382;
-}
-
-.buttonInverse {
-  background: transparent;
-  color: #ff0055;
-}
-
-.buttonInverse:hover,
-.buttonInverse:active {
-  color: white;
-  background: #ff0055;
+  background: gray;
+  border-color: rgb(100, 100, 100);
 }
 
 .buttonDanger {
@@ -39,8 +29,8 @@
 
 .buttonDanger:hover,
 .buttonDanger:active {
-  background: #f34343;
-  border-color: #f34343;
+  background: #af0101;
+  border-color: #af0101;
 }
 
 .button:disabled,
