--- a/src/shared/Navbar/Navbar.module.css
+++ b/src/shared/Navbar/Navbar.module.css
@@ -1,9 +1,10 @@
 .navbar {
   padding: 0;
   min-width: 100vw;
+  min-height: 4em;
   margin-bottom: 1rem;
-  background-color: #c0c0c0;
-  box-shadow: 0px 3px rgba(224, 224, 224, 0.692);
+  background-color: rgb(73, 73, 73);
+  box-shadow: 0px 2px rgba(219, 219, 219, 0.692);
   display: flex;
   justify-content: space-between;
   align-items: center;
