--- a/src/House/Houses.module.css
+++ b/src/House/Houses.module.css
@@ -1,16 +1,100 @@
 .createHouseBtn {
-  width: 100vw;
   width: 90%;
+  margin: auto;
   margin-top: 1.2rem;
   height: 3rem;
   border-radius: 15px;
-  background-color: rgb(255, 74, 74);
-  border-color: rgb(255, 107, 119);
   box-shadow: 1px 1px 1px rgb(228, 228, 228);
+  font-size: 20px;
 }
 
 .housesDiv {
   text-align: center;
   padding-right: 5px;
   padding-left: 5px;
+}
+
+/*-------------------------*/
+.form {
+  display: block;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper {
+  margin: auto;
+  width: 80%;
+  background: #fff;
+  /* padding: 30px; */
+  padding-top: 30px;
+}
+
+.field {
+  height: 40px;
+  width: 100%;
+  position: relative;
+}
+
+.wrapper .field input {
+  outline: none;
+  height: 100%;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid rgb(241, 241, 241);
+  font-size: 17px;
+}
+/* Change the white to any color ;) */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+  box-shadow: 0 0 0 30px white inset !important;
+}
+
+.field input:focus ~ label,
+.field input:valid ~ label {
+  transform: translateY(-25px);
+  font-style: 15px;
+  color: silver;
+}
+
+.wrapper .field label {
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  color: gray;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+
+.wrapper .field .underline {
+  position: absolute;
+  bottom: 0;
+  left: -50%;
+  height: 2px;
+  width: 100%;
+}
+
+.field .underline:before {
+  position: absolute;
+  content: '';
+  height: 100%;
+  background: silver;
+  width: 100%;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+.field input:focus ~ .underline:before,
+.field input:valid ~ .underline::before {
+  transform: scaleX(1);
+}
+
+.buttonsDiv {
+  margin: auto;
+  margin-top: 1.2em;
+  margin-bottom: 0.6em;
+  justify-content: space-around;
+  display: flex;
 }
