--- a/src/shared/UIElements/Modal.module.css
+++ b/src/shared/UIElements/Modal.module.css
@@ -15,7 +15,7 @@
 .modalHeader {
   width: 100%;
   padding: 1rem 0.5rem;
-  background: #2a006e;
+  background: rgb(99, 30, 30);
   color: white;
 }
 
