--- a/src/Announcements/Announcements.module.css
+++ b/src/Announcements/Announcements.module.css
@@ -1,8 +1,10 @@
 .groupList {
   padding: 0;
+  margin-top: 0.6em;
 }
 .announcementsDiv {
   text-align: center;
+  margin-top: 0.6em;
   padding-right: 5px;
   padding-left: 5px;
 }
