--- a/src/Announcements/AnnouncementsControl.module.css
+++ b/src/Announcements/AnnouncementsControl.module.css
@@ -20,6 +20,9 @@
   grid-row: 1;
   grid-column: 1;
   width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  padding: 10px;
   margin-top: -2;
 }
 
@@ -33,80 +36,15 @@
   justify-content: center;
 }
 
-.wrapper {
-  margin: auto;
-  width: 80%;
-  background: #fff;
-  /* padding: 30px; */
-  padding-top: 30px;
-}
-
-.field {
-  height: 40px;
-  width: 100%;
-  position: relative;
-}
-
-.wrapper .field input {
-  outline: none;
-  height: 100%;
-  width: 100%;
-  border: none;
-  border-bottom: 2px solid rgb(241, 241, 241);
-  font-size: 17px;
-}
-/* Change the white to any color ;) */
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px white inset !important;
-  box-shadow: 0 0 0 30px white inset !important;
-}
-
-.field input:focus ~ label,
-.field input:valid ~ label {
-  transform: translateY(-25px);
-  font-style: 15px;
-  color: silver;
-}
-
-.wrapper .field label {
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  color: gray;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-
-.wrapper .field .underline {
-  position: absolute;
-  bottom: 0;
-  left: -50%;
-  height: 2px;
-  width: 100%;
-}
-
-.field .underline:before {
-  position: absolute;
-  content: '';
-  height: 100%;
-  background: silver;
-  width: 100%;
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-}
-
-.field input:focus ~ .underline:before,
-.field input:valid ~ .underline::before {
-  transform: scaleX(1);
-}
-
 .buttonsDiv {
   margin: auto;
   margin-top: 1.2em;
   margin-bottom: 0.6em;
   justify-content: space-around;
   display: flex;
+}
+
+.btn {
+  min-width: 80%;
+  margin: auto;
 }
