--- a/src/People/PersonElement.module.css
+++ b/src/People/PersonElement.module.css
@@ -1,18 +1,31 @@
 .personCard {
-  width: 85%;
-  height: 3rem;
-  background-image: linear-gradient(
-    rgb(177, 177, 177),
-    rgba(226, 226, 226, 0.534)
-  );
-  border: 1px solid rgb(133, 122, 122);
-  border-radius: 10px;
-  margin-bottom: 1rem;
-  box-shadow: 2px 2px rgba(85, 85, 85, 0.534);
+  width: 90%;
+  margin: auto;
+  margin-bottom: 1.2em;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid gray;
+  padding-left: 0.6em;
+  padding-right: 0.6em;
 }
 
 .title {
-  text-align: center;
+  text-align: left;
+  min-width: 35%;
+}
+
+.rooms {
+  color: blue;
+  text-decoration: underline;
+}
+
+.deleteBtn {
+  color: #830000;
+}
+
+.deleteBtn:hover,
+.rooms:hover {
+  cursor: pointer;
 }
 
 .expandedPerson {
@@ -20,4 +33,33 @@
   width: 85%;
   margin-bottom: 1rem;
   background-color: tomato;
+}
+
+.checkBoxDiv {
+  margin: auto;
+  width: 80%;
+  display: block;
+  text-align: left;
+  border-top: 1px solid rgb(201, 201, 201);
+  border-bottom: 1px solid rgb(201, 201, 201);
+  padding-top: 0.6em;
+}
+
+.checkBoxDiv label {
+  min-width: 100%;
+}
+
+.form {
+  display: block;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonsDiv {
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
+}
+
+.assignedDiv {
+  margin-bottom: 1.2em;
 }
