--- a/src/SharedItems/RequestItem.module.css
+++ b/src/SharedItems/RequestItem.module.css
@@ -9,7 +9,7 @@
 
 .requestInner__div {
   display: flex;
-  width: 30vw;
+  width: 40%;
 }
 
 .requestInner__div p {
@@ -18,18 +18,18 @@
 }
 
 .date {
-  width: 30%;
+  min-width: 40%;
 }
 
 .name {
-  width: 70%;
+  min-width: 50%;
 }
 
 .descDiv {
   display: flex;
   margin: 0;
   padding: 0;
-  width: 70vw;
+  width: 60%;
   justify-content: space-between;
 }
 
