--- a/src/shared/Spinner/Spinner.module.css
+++ b/src/shared/Spinner/Spinner.module.css
@@ -1,16 +1,17 @@
 .loader,
 .loader:after {
   border-radius: 50%;
-  width: 10em;
-  height: 10em;
+  width: 5em;
+  height: 5em;
 }
 .loader {
+  z-index: 1;
   font-size: 10px;
   position: absolute;
   left: 50%;
-  margin-left: -5em;
+  margin-left: -2.5em;
   top: 50%;
-  margin-top: -5em;
+  margin-top: -2.5em;
   text-indent: -9999em;
   border-top: 1.1em solid #dbdbdb;
   border-right: 1.1em solid #dbdbdb;
