--- a/src/shared/UIElements/Modal.module.css
+++ b/src/shared/UIElements/Modal.module.css
@@ -14,13 +14,13 @@
 
 .modalHeader {
   width: 100%;
-  padding: 1rem 0.5rem;
+  padding: 0.5em;
   background: rgb(99, 30, 30);
   color: white;
 }
 
-.modalHeader h2 {
-  margin: 0.5rem;
+.modalHeader h4 {
+  margin: auto;
 }
 
 .modalContent {
