--- a/src/Rooms/RoomsControl.module.css
+++ b/src/Rooms/RoomsControl.module.css
@@ -6,7 +6,7 @@
 
 .buttonsDiv {
   margin: auto;
-  margin-top: 1.2em;
+  margin-top: 0.6em;
   margin-bottom: 0.6em;
   justify-content: space-around;
   display: flex;
@@ -28,4 +28,8 @@
   min-width: 80%;
   margin: auto;
   margin-bottom: 0.6em;
+}
+
+.imgUpload {
+  margin-top: 0.6em;
 }
