--- a/src/shared/Navbar/Navbar.module.css
+++ b/src/shared/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
   min-width: 100vw;
   min-height: 4em;
   margin-bottom: 1rem;
-  background-color: rgb(73, 73, 73);
+  /* background-color: rgb(73, 73, 73); */
   box-shadow: 0px 2px rgba(219, 219, 219, 0.692);
   display: flex;
   justify-content: space-between;
