--- a/src/shared/FormElements/Input.module.css
+++ b/src/shared/FormElements/Input.module.css
@@ -2,11 +2,12 @@
   margin: auto;
   width: 80%;
   background: #fff;
-  padding-top: 30px;
+  padding-bottom: 15px;
+  padding-top: 10px;
 }
 
 .field {
-  height: 40px;
+  height: 30px;
   width: 100%;
   position: relative;
 }
