--- a/src/shared/FormElements/ImageUpload.module.css
+++ b/src/shared/FormElements/ImageUpload.module.css
@@ -6,9 +6,10 @@
 }
 
 .imageUploadPreview {
-  width: 13em;
-  height: 18em;
-  border: 2px solid rgba(204, 204, 204, 0.397);
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  border: 2px solid #C8C8C8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,5 +24,5 @@
 }
 
 .plus {
-  color: rgba(204, 204, 204, 0.397);
+  color: #C8C8C8;
 }
