--- a/src/shared/FormElements/Button.module.css
+++ b/src/shared/FormElements/Button.module.css
@@ -6,7 +6,7 @@
   background: rgb(73, 73, 73);
   color: white;
   cursor: pointer;
-  margin-right: 1rem;
+  margin: auto;
   text-decoration: none;
   display: inline-block;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
