--- a/src/shared/FormElements/ImageUpload.module.css
+++ b/src/shared/FormElements/ImageUpload.module.css
@@ -26,3 +26,26 @@
 .plus {
   color: #C8C8C8;
 }
+.button {
+  font: inherit;
+  padding: 0.5rem 1.5rem;
+  border: 1px solid rgb(100, 100, 100);
+  border-radius: 4px;
+  background: rgb(73, 73, 73);
+  color: white;
+  cursor: pointer;
+  margin: auto;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:hover,
+.button:active {
+  background: gray;
+  border-color: rgb(100, 100, 100);
+}
