--- a/src/Rooms/RoomElement.module.css
+++ b/src/Rooms/RoomElement.module.css
@@ -1,13 +1,18 @@
 .roomElement {
   height: 15rem;
   width: 10rem;
-  margin-bottom: 1rem;
-  margin-right: 0.4rem;
+  margin: auto;
+  margin-bottom: 5px;
+  margin-right: 10px;
+  border: 1px solid rgb(201, 201, 201); 
+  box-shadow: 1px 1px 1px 1px rgb(231, 231, 231);
+
 }
 
 .roomImage {
-  height: 13rem;
-  width: 10rem;
+  width: 95%;
+  min-height: 90%;
+  margin: auto;
 }
 
 .roomTitle {
